--- a/application/header/header.template.html
+++ b/application/header/header.template.html
@@ -1,11 +1,31 @@
-<div id="header" class="header">
+<nav class="navbar navbar-fixed-top">
     <div class="container">
-        <div class="row">
-            <div id="header-brand" class="col-xs-2 col-xs-offset-1">
-                <img data-ng-src="" alt=""/>
-            </div>
-            <div id="header-nav" class="col-xs-6">
-            </div>
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/">
+                <img class="logo" src="./image/logo.svg"></img>
+            </a>
+        </div>
+        <div class="navbar-right">
+            <ul class="nav navbar-nav">
+                <li class="hidden">
+                    <a href="#page-top"></a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="/">HOME</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="/about">ABOUT US</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="/product">PRODUCT</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="/process">PROCESS</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="/contact">CONTACT</a>
+                </li>
+            </ul>
         </div>
     </div>
-</div>
+</nav>
