--- a/application/header/header.template.html
+++ b/application/header/header.template.html
@@ -14,16 +14,16 @@
                     <a class="page-scroll" href="/">HOME</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/about">ABOUT US</a>
+                    <a class="page-scroll" href="/">ABOUT US</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/product">PRODUCT</a>
+                    <a class="page-scroll" href="/">PRODUCT</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/process">PROCESS</a>
+                    <a class="page-scroll" href="/">PROCESS</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/contact">CONTACT</a>
+                    <a class="page-scroll" href="/">CONTACT</a>
                 </li>
             </ul>
         </div>
